--- a/index.html
+++ b/index.html
@@ -2,8 +2,70 @@
 <html>
 <head>
     <title>Página HTML</title>
+    <style>
+        /* Estilos para dispositivos móviles */
+        @media (max-width: 480px) {
+            body {
+                padding: 10px;
+                font-size: 14px;
+            }
+
+            h1, h2 {
+                text-align: center;
+            }
+
+            label {
+                display: block;
+                margin-top: 10px;
+            }
+
+            input[type="text"] {
+                width: 100%;
+                padding: 10px;
+                font-size: 16px;
+            }
+
+            button {
+                display: block;
+                width: 100%;
+                margin-top: 10px;
+                padding: 10px;
+            }
+        }
+
+        /* Estilos para escritorio */
+        @media (min-width: 481px) {
+            body {
+                padding: 20px;
+                font-size: 16px;
+            }
+
+            h1, h2 {
+                text-align: center;
+            }
+
+            label {
+                display: inline-block;
+                width: 150px;
+                margin-right: 10px;
+                text-align: right;
+            }
+
+            input[type="text"] {
+                width: 300px;
+                padding: 5px;
+            }
+
+            button {
+                display: inline-block;
+                margin-left: 10px;
+                padding: 5px 10px;
+            }
+        }
+    </style>
 </head>
 <body>
+  <div>
     <h1>Datos de la cuenta</h1>
     <div>
       <div>
@@ -21,12 +83,12 @@
         <input type="text" id="campo-banco" value="BBVA" readonly>
         <button onclick="copiarCampo('campo-banco')">Copiar Banco</button>
       </div>
-
     </div>
 
     <h2>Conversación de WhatsApp</h2>
 
     <button onclick="redirigirWhatsApp()">Abrir WhatsApp</button>
+  </div>
 
     <script>
         function copiarCampo(idCampo) {
@@ -41,7 +103,7 @@
         }
 
         function redirigirWhatsApp() {
-            var numero = "52314422886";
+            var numero = "3141422886";  // Reemplaza con tu número de teléfono de WhatsApp
             var url = "https://api.whatsapp.com/send?phone=" + numero;
             window.open(url, "_blank");
         }
